# temp-copy

./: README.md  package.json  setup.cfg  setup.py
scripts/: temp-copy
tests/temp-copy/examples/: dir.sh  file.sh
