# https://pypi.org/project/setupcfg-generator/
[metadata]
name = temp-copy
version = 2019.3.23
url = https://github.com/looking-for-a-job/temp-copy
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = temp copy

[options]
install_requires = 
	setuptools
scripts = 
	scripts/temp-copy
